2020-05-27  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] finished the algorithm which return shortest
	distance from a point to line and quadratic/cubic bezier curve.

	* sdfgen.c (solve_quintic_equation, solve_quartic_equation):
	  removed becuase no longer using.
	* sdfgen.c (get_min_distance): changed the process for calculating
	  shortest distance from a point to a cubic bezier.
	  At first the process was to calculate the roots of a 5th degree
	  polynomial, but it was rather slow and did not yeild proper
	  results.
	  So, now the function first assumes the point which is nearest
	  to the cubci curve and then improve is using Newton-Raphson's
	  method.
	  The function is now complete and return shortest distance as
	  well as the direction at the nearest from all three curves.

2020-05-25  Anuj Verma  <anujv@iitbhilai.ac.in>

	* sdfgen.c (solve_quintic_equation): finished the algorithm to
	  compute roots of a 5th degree polynomial equation. First the
	  ranges in which the roots lie are calculated using isolator
	  polynomials and then Newton-Raphson's method is used to find
	  the approximate roots within the  ranges.
	* sdfgen.c (get_min_distance): the function now return direction
	  of the quadratic bezier at the shortest point ( previously only
	  returned for lines ).

2020-05-24  Anuj Verma  <anujv@iitbhilai.ac.in>

	* sdfgen.c (get_min_distance): added comment explaining the 
	  entire procedure of calculating shortest distance from a 
	  point to a cubic bezier curve.
	* sdfgen.c (solve_quartic_equation): added function to solve
	  a 4th degree polynomial equation.
	* sdfgen.c (solve_quintic_equation): added function to solve
	  a 5th degree polynomial equation. This is not complete yet.
	  For now it only compute the range in which the roots lie.

2020-05-20  Anuj Verma  <anujv@iitbhilai.ac.in>

	* sdfgen.c (get_min_distance): fixed a calculation mistake for
	  calculating shortest distance from a point to quadratic bezier